--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A minimal Notion-style document editor with AI-powered writing assistance using Chrome's built-in AI features. Create, edit, and manage documents with markdown support." />
     <title>Document Editor</title>
   </head>
   <body>
